[package]
name = "rust-peaks-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
proteus_audio = "0.3.0"
rocket = "0.5.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]
