[package]
name = "rust-peaks-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum_typed_multipart = "0.15.1"
proteus_audio = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
